--- a/test/_navbar.html
+++ b/test/_navbar.html
@@ -7,28 +7,24 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="{{build.site.url}}">{{name}}</a>
+      <a class="navbar-brand" href="http://localhost/test">test</a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav navbar-right">
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Pages <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            {{#content}}
-              {{> nav-dropdown-li}}
-            {{/content}}
+              <li><a href="http://localhost/test/01-sample.html">Sample 1</a></li>                          <li><a href="http://localhost/test/02-sample.html">Sample 2</a></li>            
           </ul>
         </li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Assignments <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            {{#assignments}}
-              {{> nav-dropdown-li}}
-            {{/assignments}}
+              <li><a href="http://localhost/test/03-assignment.html">Assignment 1</a></li>            
           </ul>
         </li>
       </ul>
     </div><!--/.nav-collapse -->
   </div><!--/.container -->
 </div><!--/.navbar -->
-
+ 
